--- a/PhaserGame/www/css/index.css
+++ b/PhaserGame/www/css/index.css
@@ -8,6 +8,8 @@
 
     margin: 0px;
     padding: 0px;
+
+    overflow: hidden;
 }
 
 .app {
@@ -55,4 +57,32 @@
 }
 
 @media screen and (orientation: landscape) {
+}
+
+/**********************************/
+
+.loading {
+    display: none;
+    vertical-align: middle;
+    text-align: center; 
+    z-index: 99999999;
+    background-image: url('../images/menuBackground.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center; 
+    position: absolute; 
+    top: 0px; 
+    bottom: 0px; 
+    width: 100%; 
+    height: 100%
+}
+
+.pb {
+    z-index: 999999999; 
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    width: 50%; 
+    height: 10%;
+    transform: translate(-50%,-50%);
 }
