--- a/PhaserGame/www/css/index.css
+++ b/PhaserGame/www/css/index.css
@@ -71,14 +71,13 @@
     background-repeat: no-repeat;
     background-position: center center; 
     position: absolute; 
-    top: 0px; 
-    bottom: 0px; 
+    top: 0; 
+    bottom: 0; 
     width: 100%; 
     height: 100%
 }
 
 .pb {
-    z-index: 999999999; 
     position: absolute;
     top: 50%; 
     left: 50%; 
